2005-07-14  Marcus Meissner  <marcus@jet.franken.de>

	* g3.c: Added Ricoh Caplio GX 8.

2005-07-11  Marcus Meissner  <marcus@jet.franken.de>
	
	* g3.c: Added Ricoh R2 as reported.
		Added some casts to supress warnings.

2005-03-21  Marcus Meissner  <marcus@jet.franken.de>
	
	* g3.c: Added Ricoh 5000G (sea&sea edition).

2005-03-01  Marcus Meissner  <marcus@jet.franken.de>
	
	* g3.c: Split RZ1 and R1 entries to avoid slashes.

2005-02-13  Marcus Meissner  <marcus@jet.franken.de>

	* g3.c: Added Ricoh Caplio R1v as reported by
	  Johannes Guenther.

2005-01-27  Marcus Meissner  <meissner@suse.de>

	* g3.c: Added Ricoh Caplio R1 / RZ1 as reported.

2004-09-12  Marcus Meissner  <meissner@suse.de>

	* g3.c: Added Ricoh Caplio RX as reported by
	        Christoph Bauer.

2004-08-11  Marcus Meissner  <meissner@suse.de>

	* g3.c: Get the mtime out of NLST, so we get the
	  correct time without EXIF download. (might be off
	  some hours).
	
2004-08-09  Marcus Meissner  <meissner@suse.de>
	
	* g3.c: fixed buffer handling, we were overwriting
	  unallocated memory with newer libusb.

2004-05-19  Hubert Figuiere  <hfiguiere@teaser.fr>

	* g3.c (camera_abilities): Camera is Medion MD 6126

2004-05-19  Marcus Meissner <marcus@jet.franken.de>

	* g3.c: Martin Leopold reported the "Medion MD 6162"
	  as working too.

2004-01-30  Marcus Meissner <marcus@jet.franken.de>

	* g3.c: Added Caplio 300G model as reported.

2003-11-17  Marcus Meissner <marcus@jet.franken.de>

	* g3.c: 
	  - Fixed camera access with removed SD card.
	  - Handle more than 62 files in one directory.
	  - Do not call -INFO for textfiles.
	  - Try to read at least 0x800 byte to avoid confusing the
	    remote USB stack.

2003-10-10  Marcus Meissner <marcus@jet.franken.de>
	
	* g3.txt, g3.c, Makefile.am: 
	
	  Added new Ricoh Caplio G3 driver.

	  Lots of thanks to Klaus Singvogel for lending me his camera
	  over the weekend.

	  Status:
		Directory Listing, download of images, exif data and